Updated link to related work

--- a/index.html
+++ b/index.html
@@ -108,16 +108,19 @@ currently implemented.</p>
 <li><a href="https://github.com/jaberg/hyperopt/wiki/FMin">Basic tutorial</a></li>
 <li><a href="https://github.com/jaberg/hyperopt/wiki/Installation-Notes">Installation notes</a></li>
 <li><a href="https://github.com/jaberg/hyperopt/wiki/Parallelizing-Evaluations-During-Search-via-MongoDB">Using mongodb</a></li>
-</ul><h1>Examples</h1>
+</ul>
 
-<p>See <a href="https://github.com/jaberg/hyperopt/wiki/Hyperopt-in-Other-Projects">projects using hyperopt</a> on the wiki.</p>
-      </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/jaberg">jaberg</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+<h1>Examples</h1>
+
+<p>See <a href="https://github.com/jaberg/hyperopt/wiki/RelatedWork">projects using hyperopt</a> on the wiki.</p>
+
+
+</section>
+<footer>
+<p>Project maintained by <a href="https://github.com/jaberg">jaberg</a></p>
+<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
+</footer>
+</div>
+<!--[if !IE]><script>fixScale(document);</script><![endif]-->
+</body>
 </html>
